# wspn-wusd-solana

./: .env  Anchor.toml  README.md  deploy-keypair.json  package.json
programs/wusd-token/: Cargo.toml
programs/wusd-token/src/: access.rs  error.rs  lib.rs  state.rs  utils.rs
programs/wusd-token/src/instructions/: burn.rs  freeze.rs  mint.rs  mod.rs  operator.rs  pause.rs  permit.rs  transfer.rs
tests/: wusd-token.ts
